--- a/package.json
+++ b/package.json
@@ -6,6 +6,10 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "dependencies": {
+    "express": "4.2.0"
+  },
+
   "repository": {
     "type": "git",
     "url": "git+https://github.com/robinshin/relayer.git"
