--- a/package.json
+++ b/package.json
@@ -7,8 +7,7 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
-    "express": "4.2.0",
-    "body-parser": "4.2.0"
+    "express": "4.2.0"
   },
 
   "repository": {
