--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
-    "express": "4.2.0"
+    "express": "4.2.0",
+    "body-parser": "1.17.1",
+    "mongodb": "2.2.26"
   },
 
   "repository": {
