--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
   "name": "relayer",
   "version": "0.0.1",
   "description": "",
-  "main": "index.js",
+  "main": "./backend/server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node ./backend/server.js"
   },
   "dependencies": {
     "express": "4.2.0",
