--- a/package.json
+++ b/package.json
@@ -4,13 +4,13 @@
   "description": "",
   "main": "./backend/server.js",
   "scripts": {
-    "start": "nodemon ./backend/server.js"
+    "start": "sudo node ./backend/server.js"
   },
   "dependencies": {
     "body-parser": "^1.17.1",
     "express": "^4.15.2",
-    "mongodb": "^2.2.26",
-    "nodemon": "^1.11.0"
+    "forever": "^0.15.3",
+    "mongodb": "^2.2.26"
   },
   "repository": {
     "type": "git",
