--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
   "name": "relayer",
   "version": "0.0.1",
   "description": "",
-  "main": "./backend/server.js",
+  "main": "/home/robin/relayer/backend/server.js",
   "scripts": {
-    "start": "sudo node ./backend/server.js"
+    "start": "sudo node /home/robin/relayer/backend/server.js"
   },
   "dependencies": {
     "body-parser": "^1.17.1",
