--- a/package.json
+++ b/package.json
@@ -2,19 +2,18 @@
   "name": "relayer",
   "version": "0.0.1",
   "description": "",
-  "main": "/home/robin/relayer/backend/server.js",
+  "main": "/home/robin/relayers/backend/server.js",
   "scripts": {
-    "start": "sudo node /home/robin/relayer/backend/server.js"
+    "start": "sudo node /home/robin/relayers/backend/server.js"
   },
   "dependencies": {
     "body-parser": "^1.17.1",
     "express": "^4.15.2",
-    "forever": "^0.15.3",
     "mongodb": "^2.2.26"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/robinshin/relayer.git"
+    "url": "git+https://github.com/robinshin/relayers.git"
   },
   "author": "Clement Marcilhacy, Robin Shin",
   "license": "ISC",
@@ -22,8 +21,8 @@
     "node": "7.9.0"
   },
   "bugs": {
-    "url": "https://github.com/robinshin/relayer/issues"
+    "url": "https://github.com/robinshin/relayers/issues"
   },
-  "homepage": "https://github.com/robinshin/relayer#readme",
+  "homepage": "https://github.com/robinshin/relayers#readme",
   "devDependencies": {}
 }
