--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "body-parser": "^1.17.1",
     "express": "^4.15.2",
     "mongodb": "^2.2.26",
+    "mongoose": "^4.9.7",
     "nodemailer": "^4.0.1"
   },
   "repository": {
