--- a/package.json
+++ b/package.json
@@ -7,11 +7,19 @@
     "start": "sudo node /home/server/relayers/backend/server.js"
   },
   "dependencies": {
+    "bcrypt-nodejs": "0.0.3",
     "body-parser": "^1.17.1",
     "express": "^4.15.2",
+    "express-session": "^1.15.2",
+    "jsonwebtoken": "^7.4.0",
     "mongodb": "^2.2.26",
     "mongoose": "^4.9.7",
-    "nodemailer": "^4.0.1"
+    "morgan": "^1.8.1",
+    "nodemailer": "^4.0.1",
+    "passport": "^0.3.2",
+    "passport-jwt": "^2.2.1",
+    "passport-local": "^1.0.0",
+    "passport-local-mongoose": "^4.0.0"
   },
   "repository": {
     "type": "git",
