--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "passport": "^0.3.2",
     "passport-jwt": "^2.2.1",
     "passport-local": "^1.0.0",
-    "passport-local-mongoose": "^4.0.0"
+    "passport-local-mongoose": "^4.0.0",
+    "pug": "^2.0.0-rc.1"
   },
   "repository": {
     "type": "git",
